batch v2: mainloop starts batches instead of promise chaining

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "prettier.tabWidth": 2,
     "prettier.semi": false,
-    "editor.indentSize": "tabSize"
+    "editor.indentSize": "tabSize",
+    "git.inputValidationSubjectLength": null
 }
